<resources>
    <string name="app_name">BIMSI</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email Student</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signUp"><u>Not a member yet ? Sign up here</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="year_of_class">Year of Class</string>
    <string name="checkBox">I Agree to the terms and conditions of Bimsi</string>
    <string name="nickname">Nickname</string>
    <string name="data_analysis">Data Analysis</string>

    <string name="schedule">Schedule</string>
    <string name="rerserve">Reserve</string>
    <string name="forum">Forum</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="invoice">Invoice</string>
    <string name="chat">Chat</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="database_system">Database System</string>
    <string name="mobile_app">Mobile App Development</string>
    <string name="algorithm">Algorithm and Data Structure</string>
    <string name="accounting">Accounting</string>
    <string name="aboutUS">About Us</string>
    <string name="Information">Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Registration">Registration</string>
    <string name="Reservation">Reservation</string>

    <string-array name="accounting_list">
        <item>- Pilih Hari -</item>
        <item> Selasa, 18.00 WIB</item>
    </string-array>

    <string-array name="algorithm_list">
        <item>- Pilih Hari -</item>
        <item> Kamis, 18.00 WIB</item>
    </string-array>

    <string-array name="dataanalysis_list">
        <item>- Pilih Hari -</item>
        <item> Senin, 18.00 WIB</item>
    </string-array>

    <string-array name="database_list">
        <item>- Pilih Hari -</item>
        <item> Rabu, 18.00 WIB</item>
    </string-array>

    <string-array name="mobileapp_list">
        <item>- Pilih Hari -</item>
        <item> Jumat, 18.00 WIB</item>
    </string-array>
</resources>