<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Matakuliah.dataanalysis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="141dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="43dp"
            android:layout_weight="1"
            android:fontFamily="@font/caveat_brush"
            android:gravity="center"
            android:text="@string/data_analysis"
            android:textColor="@color/black"
            android:textSize="46sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/bimsi" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tulisan_danal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/group_analys"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/schedule"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:background="@drawable/kotak_biru"
                    android:fontFamily="@font/inder"
                    android:text="@string/schedule"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinJadwal"
                    android:layout_width="227dp"
                    android:layout_height="match_parent"
                    android:entries="@array/dataanalysis_list"
                    android:layout_marginRight="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="389dp"
                android:layout_height="match_parent"
                android:layout_marginRight="35dp"
                android:gravity="right"
                android:orientation="vertical">

                <Button
                    android:id="@+id/reserve"
                    android:layout_width="366dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:backgroundTint="#27598E"
                    android:gravity="center"
                    android:text="@string/rerserve"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

