<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Admin.ReadAdmin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/dataanalis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/dataanalyst" />

        <ImageView
            android:id="@+id/accountingg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/accountingbg" />

        <ImageView
            android:id="@+id/databasee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/databasee" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="28dp"
            android:layout_weight="1"
            android:fontFamily="@font/karma_medium"
            android:text="@string/data_analysis"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:layout_weight="1"
            android:fontFamily="@font/karma_medium"
            android:text="@string/accounting"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="51dp"
            android:layout_weight="1"
            android:fontFamily="@font/karma_medium"
            android:text="@string/database_system"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/algoritma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/algor" />

        <ImageView
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/mob" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:fontFamily="@font/karma_medium"
            android:gravity="center"
            android:text="@string/algorithm"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_weight="1"
            android:fontFamily="@font/karma_medium"
            android:gravity="center"
            android:text="Mobile App Development"
            android:textColor="#000000" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ReadRec"
        android:layout_width="match_parent"
        android:layout_height="395dp"
        android:layout_marginTop="10dp">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B2FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationadmin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:itemBackground="@color/grey"
            app:menu="@menu/navigation_menuadmin">

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </LinearLayout>
</LinearLayout>