<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Matakuliah.algorithm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="141dp">

        <TextView
            android:id="@+id/algorithm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/caveat_brush"
            android:gravity="center|center_horizontal|left"
            android:text="@string/algorithm"
            android:textColor="@color/black"
            android:textSize="46sp" />

        <ImageView
            android:id="@+id/fotobimsi"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/bimsi" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tulisan_algorithm"
            android:layout_width="wrap_content"
            android:layout_height="232dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/algorithm"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/scheduleDB"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:background="@drawable/kotak_biru"
                    android:fontFamily="@font/inder"
                    android:text="@string/schedule"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinJadwal4"
                    android:layout_width="192dp"
                    android:layout_height="match_parent"
                    android:entries="@array/algorithm_list"
                    android:layout_marginEnd="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="389dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="35dp"
                android:gravity="right"
                android:orientation="vertical">

                <Button
                    android:id="@+id/reserve4"
                    android:layout_width="366dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:backgroundTint="#27598E"
                    android:gravity="center"
                    android:text="@string/rerserve"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

