<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:backgroundTint="#00FFFFFF"
    android:orientation="vertical"
    tools:context=".Matakuliah.dataanalysis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="108dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnlogout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:clickable="true"
                app:srcCompat="@drawable/logout" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/caveat_brush"
                android:gravity="left"
                android:text="Hi Sobat BIMSI!"
                android:textColor="@color/black"
                android:textSize="45sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="477dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/bimsi" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/karma_medium"
        android:text="Which extra class do you want to have today?"
        android:textColor="#000000"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageDataanal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/dataanalyst" />

        <ImageButton
            android:id="@+id/imageAccounting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/accountingbg" />

        <ImageButton
            android:id="@+id/imageDatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/databasee" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="28dp"
            android:fontFamily="@font/karma_medium"
            android:text="@string/data_analysis"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:fontFamily="@font/karma_medium"
            android:text="@string/accounting"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="51dp"
            android:fontFamily="@font/karma_medium"
            android:text="@string/database_system"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/imageAlgorithm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/algor" />

        <ImageButton
            android:id="@+id/imageMobileapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/mob" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:fontFamily="@font/karma_medium"
            android:gravity="center"
            android:text="@string/algorithm"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:fontFamily="@font/karma_medium"
            android:gravity="center"
            android:text="Mobile App Development"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginTop="66dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgStudentNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/studentnote" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_weight="1"
            android:src="@drawable/dot1" />
    </LinearLayout>


</LinearLayout>

